hopefully fixed a bug causing images to render too large

--- a/src/styles/counting-game.module.css
+++ b/src/styles/counting-game.module.css
@@ -31,9 +31,11 @@
 .grid img {
   place-self: center;
   margin: 0;
-  height: 100%;
   max-height: 100%;
   width: auto;
+  justify-self: stretch;
+  align-self: stretch;
+  /* max-height: 100%; */
   filter: drop-shadow(5px 5px 5px #666666);
 }
 
